# todo-list-project-py

./: .env.example  LICENSE  README.md  docker-compose.yml  main.py  main_db.py  models.py  pyproject.toml  storage.py  todo.db  todo_manager.py  todolist.db
alembic/: env.py
alembic/versions/: 58dff6ceef11_initial_migration.py  b391990a78c9_initial_migration.py
app/api/: dependencies.py  main.py
app/api/routes/: projects.py  tasks.py
app/cli/: cli.py
app/commands/: __init__.py  autoclose_overdue.py  scheduler.py
app/db/: __init__.py  session.py
app/exceptions/: __init__.py  repository_exceptions.py  service_exceptions.py
app/models/: __init__.py  project.py  task.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/schemas/: project.py  task.py
app/services/: project_service.py  task_service.py
