[tool.poetry]
name = "todo-list-project"
version = "0.1.0"
description = "A Todo List project with FastAPI and PostgreSQL"
authors = ["Niloufar-Motamedi <niloufarmotamedi04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
schedule = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"